// This is the public API offered by your entity.
syntax = "proto3";

import "google/protobuf/empty.proto";
import "kalix/annotations.proto";
import "com/example/wallet/wallet_domain.proto";

package com.example.wallet.api;

option java_outer_classname = "WalletApi";

message InitialBalance {
    string wallet_id = 1 [(kalix.field).id = true];
    int32 balance = 2;
}

message WithdrawRequest {
    string wallet_id = 1 [(kalix.field).id = true];
    int32 amount = 2;
}

message WithdrawResult {
    oneof result {
        WithdrawFailed failed = 1;
        WithdrawSucceed succeed = 2;
    }
}

message WithdrawFailed {
    string message = 2;
}

message WithdrawSucceed {
}

message DepositResult {
    oneof result {
        DepositFailed failed = 1;
        DepositSucceed succeed = 2;
    }
}

message DepositFailed {
    string message = 2;
}

message DepositSucceed {
}

message DepositRequest {
    string wallet_id = 1 [(kalix.field).id = true];
    int32 amount = 2;
}

message GetRequest {
    string wallet_id = 1 [(kalix.field).id = true];
}

service WalletService {
    option (kalix.codegen) = {
        value_entity: {
            name: "com.example.wallet.api.WalletEntity"
            type_id: "wallet"
            state: "com.example.wallet.domain.WalletState"
        }
    };
    rpc Create(InitialBalance) returns (google.protobuf.Empty) {}
    rpc Withdraw(WithdrawRequest) returns (WithdrawResult) {}
    rpc Deposit(DepositRequest) returns (DepositResult) {}
    rpc GetWalletState(GetRequest) returns (com.example.wallet.domain.WalletState) {}
}