syntax = "proto3";

package com.example.wallet.domain;

message WalletState {
    string id = 1;
    int32 balance = 2;
}